--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,5 @@
+*Jekyll supports CSV natively and this plugin is no longer needed, unless you relly like its interface*
+
 h1. Jekyll CSV Data Reader Plugin
 
 This plugin makes data in csv tables available in "Jekyll":http://www.jekyll.com, similar to what "Jekyll":http://jekyllrb.com already does with YAML files.
